[PIXELS-902] support WriterBuffer (#136)