@@ -30,10 +30,11 @@ import io.airlift.slice.Slice;
 import io.etcd.jetcd.KeyValue;
 import io.pixelsdb.pixels.cache.PixelsCacheUtil;
 import io.pixelsdb.pixels.common.exception.MetadataException;
+import io.pixelsdb.pixels.common.exception.RetinaException;
 import io.pixelsdb.pixels.common.layout.*;
 import io.pixelsdb.pixels.common.metadata.SchemaTableName;
-import io.pixelsdb.pixels.common.metadata.domain.Table;
 import io.pixelsdb.pixels.common.metadata.domain.*;
+import io.pixelsdb.pixels.common.metadata.domain.Table;
 import io.pixelsdb.pixels.common.physical.Location;
 import io.pixelsdb.pixels.common.physical.Storage;
 import io.pixelsdb.pixels.common.physical.StorageFactory;
@@ -68,6 +69,9 @@ import io.pixelsdb.pixels.trino.exception.PixelsErrorCode;
 import io.pixelsdb.pixels.trino.impl.PixelsMetadataProxy;
 import io.pixelsdb.pixels.trino.impl.PixelsTrinoConfig;
 import io.pixelsdb.pixels.trino.properties.PixelsSessionProperties;
+import io.pixelsdb.pixels.trino.split.PixelsBufferSplit;
+import io.pixelsdb.pixels.trino.split.PixelsFileSplit;
+import io.pixelsdb.pixels.trino.split.PixelsSplit;
 import io.trino.spi.HostAddress;
 import io.trino.spi.TrinoException;
 import io.trino.spi.connector.*;
@@ -101,13 +105,14 @@ public class PixelsSplitManager implements ConnectorSplitManager
     private final boolean cacheEnabled;
     private final boolean multiSplitForOrdered;
     private final boolean projectionReadEnabled;
+    private final int fixedSplitSize;
     private String cacheSchema;
     private String cacheTable;
-    private final int fixedSplitSize;
 
     @Inject
     public PixelsSplitManager(PixelsConnectorId connectorId, PixelsMetadataProxy metadataProxy,
-                              PixelsTrinoConfig config) {
+                              PixelsTrinoConfig config)
+    {
         this.connectorId = requireNonNull(connectorId, "connectorId is null").toString();
         this.metadataProxy = requireNonNull(metadataProxy, "metadataProxy is null");
         this.config = requireNonNull(config, "config is null");
@@ -129,8 +134,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             SchemaTableName schemaTableName = new SchemaTableName(splits[0]);
             this.cacheSchema = schemaTableName.getSchemaName();
             this.cacheTable = schemaTableName.getTableName();
-        }
-        else
+        } else
         {
             this.cacheSchema = null;
             this.cacheTable = null;
@@ -158,6 +162,182 @@ public class PixelsSplitManager implements ConnectorSplitManager
             }
         }
         return builder.build();
+    }
+
+    public static Pair<Integer, InputSplit> getInputSplit(PixelsFileSplit split)
+    {
+        ArrayList<InputInfo> inputInfos = new ArrayList<>();
+        int splitSize = 0;
+        List<String> paths = split.getPaths();
+        List<Integer> rgStarts = split.getRgStarts();
+        List<Integer> rgLengths = split.getRgLengths();
+
+        for (int i = 0; i < paths.size(); ++i)
+        {
+            inputInfos.add(new InputInfo(paths.get(i), rgStarts.get(i), rgLengths.get(i)));
+            splitSize += rgLengths.get(i);
+        }
+        return new Pair<>(splitSize, new InputSplit(inputInfos));
+    }
+
+    public static SortedMap<Integer, ColumnFilter> getColumnFilters(
+            String schemaName, String tableName, String[] includeCols, TupleDomain<PixelsColumnHandle> constraint)
+    {
+        SortedMap<Integer, ColumnFilter> columnFilters = new TreeMap<>();
+
+        Map<String, Integer> colToCid = new HashMap<>(includeCols.length);
+        for (int i = 0; i < includeCols.length; ++i)
+        {
+            colToCid.put(includeCols[i], i);
+        }
+        if (constraint.getDomains().isPresent())
+        {
+            Map<PixelsColumnHandle, Domain> domains = constraint.getDomains().get();
+            for (Map.Entry<PixelsColumnHandle, Domain> entry : domains.entrySet())
+            {
+                ColumnFilter<?> columnFilter = createColumnFilter(entry.getKey(), entry.getValue());
+                if (colToCid.containsKey(entry.getKey().getColumnName()))
+                {
+                    columnFilters.put(colToCid.get(entry.getKey().getColumnName()), columnFilter);
+                } else
+                {
+                    throw new TrinoException(PixelsErrorCode.PIXELS_CONNECTOR_ERROR,
+                            "column '" + entry.getKey().getColumnName() + "' does not exist in the includeCols");
+                }
+            }
+        }
+        return columnFilters;
+    }
+
+    public static TableScanFilter createTableScanFilter(
+            String schemaName, String tableName, String[] includeCols, TupleDomain<PixelsColumnHandle> constraint)
+    {
+        SortedMap<Integer, ColumnFilter> columnFilters = getColumnFilters(schemaName, tableName, includeCols, constraint);
+        TableScanFilter tableScanFilter = new TableScanFilter(schemaName, tableName, columnFilters);
+        return tableScanFilter;
+    }
+
+    private static <T extends Comparable<T>> ColumnFilter<T> createColumnFilter(
+            PixelsColumnHandle columnHandle, Domain domain)
+    {
+        Type prestoType = domain.getType();
+        String columnName = columnHandle.getColumnName();
+        TypeDescription.Category columnType = columnHandle.getTypeCategory();
+        Class<?> filterJavaType = columnType.getInternalJavaType() == byte[].class ?
+                String.class : columnType.getInternalJavaType();
+        boolean isAll = domain.isAll();
+        boolean isNone = domain.isNone();
+        boolean allowNull = domain.isNullAllowed();
+        boolean onlyNull = domain.isOnlyNull();
+
+        Filter<T> filter = domain.getValues().getValuesProcessor().transform(
+                ranges ->
+                {
+                    Filter<T> res = new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull);
+                    if (ranges.getRangeCount() > 0)
+                    {
+                        ranges.getOrderedRanges().forEach(range ->
+                        {
+                            if (range.isSingleValue())
+                            {
+                                Bound<?> bound = createBound(prestoType, Bound.Type.INCLUDED,
+                                        range.getSingleValue());
+                                res.addDiscreteValue((Bound<T>) bound);
+                            } else
+                            {
+                                Bound.Type lowerBoundType = range.isLowInclusive() ?
+                                        Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
+                                Bound.Type upperBoundType = range.isHighInclusive() ?
+                                        Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
+                                Object lowerBoundValue = null, upperBoundValue = null;
+                                if (range.isLowUnbounded())
+                                {
+                                    lowerBoundType = Bound.Type.UNBOUNDED;
+                                } else
+                                {
+                                    lowerBoundValue = range.getLowBoundedValue();
+                                }
+                                if (range.isHighUnbounded())
+                                {
+                                    upperBoundType = Bound.Type.UNBOUNDED;
+                                } else
+                                {
+                                    upperBoundValue = range.getHighBoundedValue();
+                                }
+                                Bound<?> lowerBound = createBound(prestoType, lowerBoundType, lowerBoundValue);
+                                Bound<?> upperBound = createBound(prestoType, upperBoundType, upperBoundValue);
+                                res.addRange((Bound<T>) lowerBound, (Bound<T>) upperBound);
+                            }
+                        });
+                    }
+                    return res;
+                },
+                discreteValues ->
+                {
+                    Filter<T> res = new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull);
+                    Bound.Type boundType = discreteValues.isInclusive() ?
+                            Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
+                    discreteValues.getValues().forEach(value ->
+                    {
+                        if (value == null)
+                        {
+                            throw new TrinoException(PixelsErrorCode.PIXELS_INVALID_METADATA,
+                                    "discrete value is null");
+                        } else
+                        {
+                            Bound<?> bound = createBound(prestoType, boundType, value);
+                            res.addDiscreteValue((Bound<T>) bound);
+                        }
+                    });
+                    return res;
+                },
+                allOrNone -> new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull)
+        );
+        return new ColumnFilter<>(columnName, columnType, filter);
+    }
+
+    private static Bound<?> createBound(Type prestoType, Bound.Type boundType, Object value)
+    {
+        Class<?> javaType = prestoType.getJavaType();
+        Bound<?> bound = null;
+        if (boundType == Bound.Type.UNBOUNDED)
+        {
+            bound = new Bound<>(boundType, null);
+        } else
+        {
+            requireNonNull(value, "the value of the bound is null");
+            if (javaType == long.class)
+            {
+                switch (prestoType.getTypeSignature().getBase())
+                {
+                    case StandardTypes.DATE:
+                    case StandardTypes.TIME:
+                        bound = new Bound<>(boundType, ((Long) value).intValue());
+                        break;
+                    default:
+                        bound = new Bound<>(boundType, (Long) value);
+                        break;
+                }
+            } else if (javaType == int.class)
+            {
+                bound = new Bound<>(boundType, (Integer) value);
+            } else if (javaType == double.class)
+            {
+                bound = new Bound<>(boundType, Double.doubleToLongBits((Double) value));
+            } else if (javaType == boolean.class)
+            {
+                bound = new Bound<>(boundType, (byte) ((Boolean) value ? 1 : 0));
+            } else if (javaType == Slice.class)
+            {
+                bound = new Bound<>(boundType, ((Slice) value).toString(StandardCharsets.UTF_8).trim());
+            } else
+            {
+                throw new TrinoException(PixelsErrorCode.PIXELS_DATA_TYPE_ERROR,
+                        "unsupported data type for filter bound: " + javaType.getName());
+            }
+        }
+
+        return bound;
     }
 
     @Override
@@ -218,10 +398,10 @@ public class PixelsSplitManager implements ConnectorSplitManager
                         OutputInfo outputInfo = new OutputInfo(folder, config.getOutputStorageInfo(), true);
                         scanInput.setOutput(outputInfo);
                         List<String> outputPaths = ScanInput.generateOutputPaths(scanInput);
-                        PixelsSplit split = new PixelsSplit(transHandle.getTransId(), splitId++, connectorId,
+                        PixelsFileSplit split = new PixelsFileSplit(transHandle.getTransId(), splitId++, connectorId,
                                 root.getSchemaName(), root.getTableName(), config.getOutputStorageScheme().name(), outputPaths,
                                 Collections.nCopies(outputPaths.size(), 0), Collections.nCopies(outputPaths.size(), -1),
-                                false, false, Arrays.asList(address), columnOrder, cacheOrder,
+                                false, false, List.of(address), columnOrder, cacheOrder,
                                 // we do not use synthetic columns for scan operator
                                 emptyConstraint, true, false);
                         splitsBuilder.add(split);
@@ -231,7 +411,8 @@ public class PixelsSplitManager implements ConnectorSplitManager
                         PlanCoordinatorFactory.Instance().createPlanCoordinator(transHandle.getTransId(), scanOperator);
                     }
                     // logger.debug("scan operator: " + JSON.toJSONString(scanOperator));
-                    scanOperator.execute().thenAccept(scanOutputs -> {
+                    scanOperator.execute().thenAccept(scanOutputs ->
+                    {
                         for (int i = 0; i < scanOutputs.length; ++i)
                         {
                             setServerlessWorkerState(scanOutputs[i], stateKeyPrefix, i);
@@ -265,10 +446,24 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     pixelsSplits = splitsBuilder.build();
                 } else
                 {
-                    pixelsSplits = getScanSplits(transHandle, session, tableHandle);
-                    Collections.shuffle(pixelsSplits);
+                    List<PixelsFileSplit> pixelsFileSplits = getScanSplits(transHandle, session, tableHandle);
+                    Collections.shuffle(pixelsFileSplits);
+                    pixelsSplits = pixelsFileSplits.stream()
+                            .map(split -> (PixelsSplit) split)
+                            .collect(Collectors.toList());
                 }
-            } catch (MetadataException | IOException e)
+
+                {
+                    List<PixelsBufferSplit> pixelsBufferSplits = getBufferSplits(transHandle, session, tableHandle,
+                            pixelsSplits.size());
+                    pixelsSplits.addAll(
+                            pixelsBufferSplits.stream()
+                                    .map(split -> (PixelsSplit) split)
+                                    .toList()
+                    );
+                }
+
+            } catch (MetadataException | IOException | RetinaException e)
             {
                 logger.error(e, "failed to get scan splits");
                 throw new TrinoException(PixelsErrorCode.PIXELS_SQL_EXECUTE_ERROR,
@@ -276,8 +471,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             }
 
             return new PixelsSplitSource(pixelsSplits);
-        }
-        else if (tableHandle.getTableType() == TableType.JOINED)
+        } else if (tableHandle.getTableType() == TableType.JOINED)
         {
             // The table type is joined, means cloud function has been enabled.
             JoinedTable root = parseJoinPlan(transHandle.getTransId(), tableHandle);
@@ -302,17 +496,18 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     output.setPath(config.getOutputFolderForQuery(transHandle.getTransId(),
                             tableHandle.getSchemaName() + "/" + tableHandle.getTableName()));
                     joinInput.setOutput(output);
-                    PixelsSplit split = new PixelsSplit(
+                    PixelsFileSplit split = new PixelsFileSplit(
                             transHandle.getTransId(), splitId++, connectorId, root.getSchemaName(), root.getTableName(),
                             config.getOutputStorageScheme().name(), MultiOutputInfo.generateOutputPaths(output),
                             Collections.nCopies(joinInput.getOutput().getFileNames().size(), 0),
                             Collections.nCopies(joinInput.getOutput().getFileNames().size(), -1),
-                            false, false, Arrays.asList(address), columnOrder,
+                            false, false, List.of(address), columnOrder,
                             cacheOrder, emptyConstraint, true, true);
                     splitsBuilder.add(split);
                 }
                 // logger.debug("join operator: " + JSON.toJSONString(joinOperator));
-                joinOperator.execute().thenAccept(joinOutputs -> {
+                joinOperator.execute().thenAccept(joinOutputs ->
+                {
                     for (int i = 0; i < joinOutputs.length; ++i)
                     {
                         setServerlessWorkerState(joinOutputs[i], stateKeyPrefix, i);
@@ -348,8 +543,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             {
                 throw new TrinoException(PixelsErrorCode.PIXELS_SQL_EXECUTE_ERROR, e);
             }
-        }
-        else if (tableHandle.getTableType() == TableType.AGGREGATED)
+        } else if (tableHandle.getTableType() == TableType.AGGREGATED)
         {
             AggregatedTable root = parseAggregatePlan(transHandle.getTransId(), tableHandle);
 
@@ -372,16 +566,17 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     output.setPath(config.getOutputFilePathForQuery(transHandle.getTransId(),
                             output.getPath().substring(output.getPath().indexOf(tableHandle.getSchemaName()))));
                     aggrInput.setOutput(output);
-                    PixelsSplit split = new PixelsSplit(
+                    PixelsFileSplit split = new PixelsFileSplit(
                             transHandle.getTransId(), splitId++, connectorId, root.getSchemaName(), root.getTableName(),
                             config.getOutputStorageScheme().name(), ImmutableList.of(output.getPath()), ImmutableList.of(0),
-                            ImmutableList.of(-1), false, false, Arrays.asList(address), columnOrder,
+                            ImmutableList.of(-1), false, false, List.of(address), columnOrder,
                             cacheOrder, emptyConstraint, true, true);
                     splitsBuilder.add(split);
                 }
 
                 // logger.debug("aggregation operator: " + JSON.toJSONString(aggrOperator));
-                aggrOperator.execute().thenAccept(aggrOutputs -> {
+                aggrOperator.execute().thenAccept(aggrOutputs ->
+                {
                     for (int i = 0; i < aggrOutputs.length; ++i)
                     {
                         setServerlessWorkerState(aggrOutputs[i], stateKeyPrefix, i);
@@ -417,8 +612,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             {
                 throw new TrinoException(PixelsErrorCode.PIXELS_SQL_EXECUTE_ERROR, e);
             }
-        }
-        else
+        } else
         {
             throw new TrinoException(PixelsErrorCode.PIXELS_CONNECTOR_ERROR, "table type is not supported");
         }
@@ -426,14 +620,16 @@ public class PixelsSplitManager implements ConnectorSplitManager
 
     /**
      * Set the state for the output (response) of a serverless worker in etcd.
+     *
      * @param workerOutputFuture the completable future of the serverless worker's output
-     * @param stateKeyPrefix the prefix of state key to be set in etcd
-     * @param workerId the id of the serverless worker, should be unique in a query
+     * @param stateKeyPrefix     the prefix of state key to be set in etcd
+     * @param workerId           the id of the serverless worker, should be unique in a query
      */
     private void setServerlessWorkerState(CompletableFuture<? extends Output> workerOutputFuture,
                                           String stateKeyPrefix, int workerId)
     {
-        workerOutputFuture.thenAccept(output -> {
+        workerOutputFuture.thenAccept(output ->
+        {
             // PIXELS-506: set the state in etcd
             StateManager stateManager = new StateManager(stateKeyPrefix + workerId);
             stateManager.setState(JSON.toJSONString(output.toSimpleOutput()));
@@ -446,7 +642,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
      * to read the join result, and are generated from the column name plus the logical ordinary id
      * of the columns from the left and right tables.
      *
-     * @param transId the transaction id
+     * @param transId     the transaction id
      * @param tableHandle the joined table handle
      * @return the parsed join plan
      */
@@ -476,8 +672,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             leftTable = new BaseTable(leftHandle.getSchemaName(), leftHandle.getTableName(),
                     leftHandle.getTableAlias(), leftColumns, createTableScanFilter(leftHandle.getSchemaName(),
                     leftHandle.getTableName(), leftColumns, leftHandle.getConstraint()));
-        }
-        else
+        } else
         {
             checkArgument(joinHandle.getLeftTable().getTableType() == TableType.JOINED,
                     "left table is not a base or joined table, can not parse");
@@ -512,8 +707,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             rightTable = new BaseTable(rightHandle.getSchemaName(), rightHandle.getTableName(),
                     rightHandle.getTableAlias(), rightColumns, createTableScanFilter(rightHandle.getSchemaName(),
                     rightHandle.getTableName(), rightColumns, rightHandle.getConstraint()));
-        }
-        else
+        } else
         {
             checkArgument(joinHandle.getRightTable().getTableType() == TableType.JOINED,
                     "right table is not a base or joined table, can not parse");
@@ -635,8 +829,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
              * of join execution.
              */
             rotateLeftRight = true;
-        }
-        else if (leftHandle.getTableType() == TableType.JOINED &&
+        } else if (leftHandle.getTableType() == TableType.JOINED &&
                 rightHandle.getTableType() == TableType.JOINED &&
                 joinEndian == JoinEndian.LARGE_LEFT)
         {
@@ -653,8 +846,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             join = new Join(rightTable, leftTable, rightJoinedColumns, leftJoinedColumns,
                     rightKeyColumnIds, leftKeyColumnIds, rightProjection, leftProjection,
                     joinEndian.flip(), joinHandle.getJoinType().flip(), joinAlgo);
-        }
-        else
+        } else
         {
             join = new Join(leftTable, rightTable, leftJoinedColumns, rightJoinedColumns,
                     leftKeyColumnIds, rightKeyColumnIds, leftProjection, rightProjection,
@@ -697,14 +889,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             outputColumnMap.put(outputColumn, outputColumn);
             if (groupKeyColumnMap.containsKey(outputColumn))
             {
-                if (newColumns.contains(outputColumn))
-                {
-                    groupKeyColumnProj[j] = true;
-                }
-                else
-                {
-                    groupKeyColumnProj[j] = false;
-                }
+                groupKeyColumnProj[j] = newColumns.contains(outputColumn);
                 ++j;
             }
         }
@@ -762,8 +947,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
         if (originTableHandle.getTableType() == TableType.JOINED)
         {
             originTable = parseJoinPlan(transId, originTableHandle);
-        }
-        else
+        } else
         {
             originTable = parseBaseTable(originTableHandle);
         }
@@ -793,24 +977,8 @@ public class PixelsSplitManager implements ConnectorSplitManager
                 tableHandle.getTableName(), columns, tableHandle.getConstraint()));
     }
 
-    public static Pair<Integer, InputSplit> getInputSplit(PixelsSplit split)
-    {
-        ArrayList<InputInfo> inputInfos = new ArrayList<>();
-        int splitSize = 0;
-        List<String> paths = split.getPaths();
-        List<Integer> rgStarts = split.getRgStarts();
-        List<Integer> rgLengths = split.getRgLengths();
-
-        for (int i = 0; i < paths.size(); ++i)
-        {
-            inputInfos.add(new InputInfo(paths.get(i), rgStarts.get(i), rgLengths.get(i)));
-            splitSize += rgLengths.get(i);
-        }
-        return new Pair<>(splitSize, new InputSplit(inputInfos));
-    }
-
-    private List<PixelsSplit> getScanSplits(PixelsTransactionHandle transHandle, ConnectorSession session,
-                                            PixelsTableHandle tableHandle) throws MetadataException
+    private List<PixelsFileSplit> getScanSplits(PixelsTransactionHandle transHandle, ConnectorSession session,
+                                                PixelsTableHandle tableHandle) throws MetadataException
     {
         // Do not use constraint_ in the parameters, it is always TupleDomain.all().
         TupleDomain<PixelsColumnHandle> constraint = tableHandle.getConstraint();
@@ -837,8 +1005,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             {
                 transHandle.addScanBytes(nameToColumnMap.get(desiredColumn.getColumnName()).getSize());
             }
-        }
-        catch (MetadataException e)
+        } catch (MetadataException e)
         {
             throw new TrinoException(PixelsErrorCode.PIXELS_METADATA_ERROR, e);
         } catch (IOException e)
@@ -854,7 +1021,6 @@ public class PixelsSplitManager implements ConnectorSplitManager
          * this.cacheSchema and this.cacheTable are not null if this.cacheEnabled == true.
          */
         boolean usingCache = false;
-        if (this.cacheEnabled)
         {
             KeyValue keyValue = EtcdUtil.Instance().getKeyValue(Constants.LAYOUT_VERSION_LITERAL);
             if (keyValue != null)
@@ -882,7 +1048,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
         boolean orderedPathEnabled = PixelsSessionProperties.getOrderedPathEnabled(session);
         boolean compactPathEnabled = PixelsSessionProperties.getCompactPathEnabled(session);
 
-        List<PixelsSplit> pixelsSplits = new ArrayList<>();
+        List<PixelsFileSplit> pixelsSplits = new ArrayList<>();
         for (Layout layout : layouts)
         {
             // get index
@@ -901,8 +1067,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
             if (this.fixedSplitSize > 0)
             {
                 splitSize = this.fixedSplitSize;
-            }
-            else
+            } else
             {
                 // log.info("columns to be accessed: " + columnSet.toString());
                 SplitsIndex splitsIndex = IndexFactory.Instance().getSplitsIndex(schemaTableName);
@@ -911,8 +1076,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     logger.debug("splits index not exist in factory, building index...");
                     splitsIndex = buildSplitsIndex(transHandle.getTransId(),
                             version, ordered, splits, schemaTableName);
-                }
-                else
+                } else
                 {
                     long indexVersion = splitsIndex.getVersion();
                     if (indexVersion < version)
@@ -939,8 +1103,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                 {
                     logger.debug("projections index not exist in factory, building index...");
                     projectionsIndex = buildProjectionsIndex(ordered, projections, schemaTableName);
-                }
-                else
+                } else
                 {
                     int indexVersion = projectionsIndex.getVersion();
                     if (indexVersion < version)
@@ -960,19 +1123,17 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     {
                         compactPaths.add(projectionPaths.get(projectionPathId));
                     }
-                }
-                else
+                } else
                 {
                     compactPaths = layout.getCompactPaths();
                 }
-            }
-            else
+            } else
             {
                 compactPaths = layout.getCompactPaths();
             }
 
             long splitId = 0;
-            if(usingCache)
+            if (usingCache)
             {
                 Compact compact = layout.getCompact();
                 int cacheBorder = compact.getCacheBorder();
@@ -980,7 +1141,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                 String cacheVersion;
                 EtcdUtil etcdUtil = EtcdUtil.Instance();
                 KeyValue keyValue = etcdUtil.getKeyValue(Constants.CACHE_VERSION_LITERAL);
-                if(keyValue != null)
+                if (keyValue != null)
                 {
                     // 1. get version
                     String value = keyValue.getValue().toString(StandardCharsets.UTF_8);
@@ -992,7 +1153,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                     // 2. get the cached files of each node
                     List<KeyValue> nodeFiles = etcdUtil.getKeyValuesByPrefix(
                             Constants.CACHE_LOCATION_LITERAL + cacheVersion);
-                    if(!nodeFiles.isEmpty())
+                    if (!nodeFiles.isEmpty())
                     {
                         Map<String, String> fileToNodeMap = new HashMap<>();
                         for (KeyValue kv : nodeFiles)
@@ -1000,7 +1161,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                             String node = PixelsCacheUtil.getHostnameFromCacheLocationLiteral(
                                     kv.getKey().toString(StandardCharsets.UTF_8));
                             String[] files = kv.getValue().toString(StandardCharsets.UTF_8).split(";");
-                            for(String file : files)
+                            for (String file : files)
                             {
                                 fileToNodeMap.put(file, node);
                                 // log.info("cache location: {file='" + file + "', node='" + node + "'");
@@ -1034,7 +1195,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                                     List<HostAddress> orderedAddresses = toHostAddresses(
                                             storage.getLocations(orderedFilePaths.get(firstPath)));
 
-                                    PixelsSplit pixelsSplit = new PixelsSplit(
+                                    PixelsFileSplit pixelsSplit = new PixelsFileSplit(
                                             transHandle.getTransId(), splitId++, connectorId,
                                             tableHandle.getSchemaName(), tableHandle.getTableName(),
                                             table.getStorageScheme().name(), paths,
@@ -1075,11 +1236,11 @@ public class PixelsSplitManager implements ConnectorSplitManager
                                             ensureLocality = true;
                                         }
 
-                                        PixelsSplit pixelsSplit = new PixelsSplit(
+                                        PixelsFileSplit pixelsSplit = new PixelsFileSplit(
                                                 transHandle.getTransId(), splitId++, connectorId,
                                                 tableHandle.getSchemaName(), tableHandle.getTableName(),
-                                                table.getStorageScheme().name(), Arrays.asList(path),
-                                                Arrays.asList(curFileRGIdx), Arrays.asList(splitSize),
+                                                table.getStorageScheme().name(), Collections.singletonList(path),
+                                                List.of(curFileRGIdx), List.of(splitSize),
                                                 true, ensureLocality, compactAddresses, ordered.getColumnOrder(),
                                                 cacheColumnChunkOrders, constraint, false, false);
                                         pixelsSplits.add(pixelsSplit);
@@ -1088,26 +1249,22 @@ public class PixelsSplitManager implements ConnectorSplitManager
                                     }
                                 }
                             }
-                        }
-                        catch (IOException e)
+                        } catch (IOException e)
                         {
                             throw new TrinoException(PixelsErrorCode.PIXELS_STORAGE_ERROR, e);
                         }
-                    }
-                    else
+                    } else
                     {
                         logger.error("Get caching files error when version is " + cacheVersion);
                         throw new TrinoException(PixelsErrorCode.PIXELS_CACHE_NODE_FILE_ERROR,
                                 new CacheException("Get caching files error when version is " + cacheVersion));
                     }
-                }
-                else
+                } else
                 {
                     throw new TrinoException(PixelsErrorCode.PIXELS_CACHE_VERSION_ERROR,
                             new CacheException("Failed to get cache version from etcd"));
                 }
-            }
-            else
+            } else
             {
                 logger.debug("cache is disabled or no cache available on this table");
                 try
@@ -1137,7 +1294,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                             List<HostAddress> orderedAddresses = toHostAddresses(
                                     storage.getLocations(orderedFilePaths.get(firstPath)));
 
-                            PixelsSplit pixelsSplit = new PixelsSplit(
+                            PixelsFileSplit pixelsSplit = new PixelsFileSplit(
                                     transHandle.getTransId(), splitId++, connectorId,
                                     tableHandle.getSchemaName(), tableHandle.getTableName(),
                                     table.getStorageScheme().name(), paths,
@@ -1164,11 +1321,11 @@ public class PixelsSplitManager implements ConnectorSplitManager
                             {
                                 List<HostAddress> compactAddresses = toHostAddresses(storage.getLocations(path));
 
-                                PixelsSplit pixelsSplit = new PixelsSplit(
+                                PixelsFileSplit pixelsSplit = new PixelsFileSplit(
                                         transHandle.getTransId(), splitId++, connectorId,
                                         tableHandle.getSchemaName(), tableHandle.getTableName(),
-                                        table.getStorageScheme().name(), Arrays.asList(path),
-                                        Arrays.asList(curFileRGIdx), Arrays.asList(splitSize),
+                                        table.getStorageScheme().name(), Collections.singletonList(path),
+                                        List.of(curFileRGIdx), List.of(splitSize),
                                         false, storage.hasLocality(), compactAddresses,
                                         ordered.getColumnOrder(), new ArrayList<>(0),
                                         constraint, false, false);
@@ -1177,8 +1334,7 @@ public class PixelsSplitManager implements ConnectorSplitManager
                             }
                         }
                     }
-                }
-                catch (IOException e)
+                } catch (IOException e)
                 {
                     throw new TrinoException(PixelsErrorCode.PIXELS_STORAGE_ERROR, e);
                 }
@@ -1188,162 +1344,38 @@ public class PixelsSplitManager implements ConnectorSplitManager
         return pixelsSplits;
     }
 
-    public static TableScanFilter createTableScanFilter(
-            String schemaName, String tableName, String[] includeCols, TupleDomain<PixelsColumnHandle> constraint)
+    private List<PixelsBufferSplit> getBufferSplits(PixelsTransactionHandle transHandle, ConnectorSession session,
+                                                    PixelsTableHandle tableHandle, long splitId) throws MetadataException, RetinaException
     {
-        SortedMap<Integer, ColumnFilter> columnFilters = new TreeMap<>();
-        TableScanFilter tableScanFilter = new TableScanFilter(schemaName, tableName, columnFilters);
-        Map<String, Integer> colToCid = new HashMap<>(includeCols.length);
-        for (int i = 0; i < includeCols.length; ++i)
-        {
-            colToCid.put(includeCols[i], i);
-        }
-        if (constraint.getDomains().isPresent())
-        {
-            Map<PixelsColumnHandle, Domain> domains = constraint.getDomains().get();
-            for (Map.Entry<PixelsColumnHandle, Domain> entry : domains.entrySet())
-            {
-                ColumnFilter<?> columnFilter = createColumnFilter(entry.getKey(), entry.getValue());
-                if (colToCid.containsKey(entry.getKey().getColumnName()))
-                {
-                    columnFilters.put(colToCid.get(entry.getKey().getColumnName()), columnFilter);
-                }
-                else
-                {
-                    throw new TrinoException(PixelsErrorCode.PIXELS_CONNECTOR_ERROR,
-                            "column '" + entry.getKey().getColumnName() + "' does not exist in the includeCols");
-                }
-            }
-        }
+        List<PixelsBufferSplit> pixelsBufferSplits = new ArrayList<>();
 
-        return tableScanFilter;
-    }
+        // Do not use constraint_ in the parameters, it is always TupleDomain.all().
+        TupleDomain<PixelsColumnHandle> constraint = tableHandle.getConstraint();
+        List<PixelsColumnHandle> desiredColumns = getIncludeColumns(tableHandle);
 
-    private static  <T extends Comparable<T>> ColumnFilter<T> createColumnFilter(
-            PixelsColumnHandle columnHandle, Domain domain)
-    {
-        Type prestoType = domain.getType();
-        String columnName = columnHandle.getColumnName();
-        TypeDescription.Category columnType = columnHandle.getTypeCategory();
-        Class<?> filterJavaType = columnType.getInternalJavaType() == byte[].class ?
-                String.class : columnType.getInternalJavaType();
-        boolean isAll = domain.isAll();
-        boolean isNone = domain.isNone();
-        boolean allowNull = domain.isNullAllowed();
-        boolean onlyNull = domain.isOnlyNull();
+        String schemaName = tableHandle.getSchemaName();
+        String tableName = tableHandle.getTableName();
 
-        Filter<T> filter = domain.getValues().getValuesProcessor().transform(
-                ranges -> {
-                    Filter<T> res = new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull);
-                    if (ranges.getRangeCount() > 0)
-                    {
-                        ranges.getOrderedRanges().forEach(range ->
-                        {
-                            if (range.isSingleValue())
-                            {
-                                Bound<?> bound = createBound(prestoType, Bound.Type.INCLUDED,
-                                        range.getSingleValue());
-                                res.addDiscreteValue((Bound<T>) bound);
-                            } else
-                            {
-                                Bound.Type lowerBoundType = range.isLowInclusive() ?
-                                        Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
-                                Bound.Type upperBoundType = range.isHighInclusive() ?
-                                        Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
-                                Object lowerBoundValue = null, upperBoundValue = null;
-                                if (range.isLowUnbounded())
-                                {
-                                    lowerBoundType = Bound.Type.UNBOUNDED;
-                                } else
-                                {
-                                    lowerBoundValue = range.getLowBoundedValue();
-                                }
-                                if (range.isHighUnbounded())
-                                {
-                                    upperBoundType = Bound.Type.UNBOUNDED;
-                                } else
-                                {
-                                    upperBoundValue = range.getHighBoundedValue();
-                                }
-                                Bound<?> lowerBound = createBound(prestoType, lowerBoundType, lowerBoundValue);
-                                Bound<?> upperBound = createBound(prestoType, upperBoundType, upperBoundValue);
-                                res.addRange((Bound<T>) lowerBound, (Bound<T>) upperBound);
-                            }
-                        });
-                    }
-                    return res;
-                },
-                discreteValues -> {
-                    Filter<T> res = new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull);
-                    Bound.Type boundType = discreteValues.isInclusive() ?
-                            Bound.Type.INCLUDED : Bound.Type.EXCLUDED;
-                    discreteValues.getValues().forEach(value ->
-                    {
-                        if (value == null)
-                        {
-                            throw new TrinoException(PixelsErrorCode.PIXELS_INVALID_METADATA,
-                                    "discrete value is null");
-                        } else
-                        {
-                            Bound<?> bound = createBound(prestoType, boundType, value);
-                            res.addDiscreteValue((Bound<T>) bound);
-                        }
-                    });
-                    return res;
-                },
-                allOrNone -> new Filter<>(filterJavaType, isAll, isNone, allowNull, onlyNull)
+        int originColumnCnt = metadataProxy.getMetadataService().getColumns(schemaName, tableName, false).size();
+        // The address is not used to dispatch Pixels splits, so we use set it the localhost.
+        HostAddress address = HostAddress.fromString("localhost:8080");
+
+        List<String> columnOrder = ImmutableList.of();
+        TupleDomain<PixelsColumnHandle> emptyConstraint = Constraint.alwaysTrue().getSummary().transformKeys(
+                columnHandle -> (PixelsColumnHandle) columnHandle);
+
+        TypeDescription schema = metadataProxy.getSchema(schemaName, tableName);
+        PixelsBufferSplit split = new PixelsBufferSplit(transHandle.getTransId(), splitId++, connectorId,
+                schemaName, tableName,
+                "minio",
+                List.of(address),
+                columnOrder, emptyConstraint, // maybe useless
+                originColumnCnt,
+                schema.toString()
         );
-        return new ColumnFilter<>(columnName, columnType, filter);
-    }
+        pixelsBufferSplits.add(split);
 
-    private static Bound<?> createBound(Type prestoType, Bound.Type boundType, Object value)
-    {
-        Class<?> javaType = prestoType.getJavaType();
-        Bound<?> bound = null;
-        if (boundType == Bound.Type.UNBOUNDED)
-        {
-            bound = new Bound<>(boundType, null);
-        }
-        else
-        {
-            requireNonNull(value, "the value of the bound is null");
-            if (javaType == long.class)
-            {
-                switch (prestoType.getTypeSignature().getBase())
-                {
-                    case StandardTypes.DATE:
-                    case StandardTypes.TIME:
-                        bound = new Bound<>(boundType, ((Long) value).intValue());
-                        break;
-                    default:
-                        bound = new Bound<>(boundType, (Long) value);
-                        break;
-                }
-            }
-            else if (javaType == int.class)
-            {
-                bound = new Bound<>(boundType, (Integer) value);
-            }
-            else if (javaType == double.class)
-            {
-                bound = new Bound<>(boundType, Double.doubleToLongBits((Double) value));
-            }
-            else if (javaType == boolean.class)
-            {
-                bound = new Bound<>(boundType, (byte) ((Boolean) value ? 1 : 0));
-            }
-            else if (javaType == Slice.class)
-            {
-                bound = new Bound<>(boundType, ((Slice) value).toString(StandardCharsets.UTF_8).trim());
-            }
-            else
-            {
-                throw new TrinoException(PixelsErrorCode.PIXELS_DATA_TYPE_ERROR,
-                        "unsupported data type for filter bound: " + javaType.getName());
-            }
-        }
-
-        return bound;
+        return pixelsBufferSplits;
     }
 
     private List<HostAddress> toHostAddresses(List<Location> locations)
